# ocbrain-v4.1

./: .gitignore  ADR_K2_3_01_GOVERNANCE_OWNERSHIP.md  ARCHITECTURE_ALIGNMENT_REPORT.md  ARCHITECTURE_CHANGELOG.md  ARCHITECTURE_COMPLIANCE_REPORT.md  ARCHITECTURE_HARDENING_SESSION_REPORT.md  AUDIT_REPORT.md  BUG_FIXES.md  BUG_RESEARCH_REPORT.md  CHANGELOG.md  CURRENT_STATE.md  IMPLEMENTATION_ROADMAP.md  K2_2_CUTOVER_REPORT.md  K2_3_CAPABILITY_RUNTIME_REPORT.md  K2_IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  MINIMUM_ARCHITECTURE_PATH.md  OCBRAIN_EXTERNAL_REPO_STUDY.md  OCBRAIN_EXTERNAL_REPO_STUDY_V2.md  OCBRAIN_EXTERNAL_REPO_STUDY_V3.md  OCBRAIN_FUTURE_ARCHITECTURE.md  OCBRAIN_K1.5_KERNEL_API_SERVICE_MODEL.md  OCBRAIN_K1.6_RESOURCE_MODEL.md  OCBRAIN_K1_KERNEL_AUDIT_AND_SPECIFICATION.md  OCBRAIN_KERNEL_CONSTITUTION.md  OCBRAIN_KERNEL_CONSTITUTION_PRESSURE_TEST.md  OCBRAIN_KERNEL_CONSTITUTION_RATIONALE.md  OCBRAIN_KERNEL_Draft_0.9.md  PRODUCT.md  PROJECT_INDEX.md  PROJECT_INSTRUCTIONS.md  README.md  REPOSITORY_CLEANUP_REPORT.md  SESSION4B_REPORT.md  SESSION4C_REPORT.md  SESSION4_REPORT.md  \workflows\ci.yml  execution_runtime.py  install.sh  main.py  (+6 more)
.data/: phase2_baseline.json  runtime_state.sqlite  test_ordering.sqlite  test_state.sqlite
config/: models.toml  settings.toml  settings.yaml  sources.toml  user_prefs.yaml
core/: brain_api.py  brain_export.py  brain_version.py  classifier.py  classifier_v3.py  config.py  context.py  decomposer.py  dispatcher.py  event_bus.py  merger.py  migrator.py  model_router.py  module_factory.py  module_registry.py  orchestrator.py  orchestrator_v3.py  parser.py  privacy.py  provider_mesh.py
data/: context.sqlite
evals/: dataset.json  run_eval.py
examples/: demo_phase2.py
install/: build.py
interface/: api.py  cli.py  tray.py  updater.py  voice.py
learning/: chunker.py  cleaner.py  crawler.py  distiller.py  embedder.py  evaluator.py  finetuner.py  gap_detector.py  scheduler.py  trainer.py
modules/: base.py  embedding_fn.py
scripts/: integration_check.py
tests/: break_adaptive_thrash.py  break_cancellation.py  break_circuit_race.py  break_ordering.py  chaos_monkey.py  conftest.py  phase2_verification.py  test_architecture_hardening_session.py  test_break_concurrency.py  test_break_empty_db.py  test_break_security.py  test_capabilities.py  test_chunker.py  test_cognitive_memory.py  test_config.py  test_context.py  test_context_builder.py  test_decomposer.py  test_execution_runtime.py  test_fuzz.py  test_graph.py  test_graph_indexer.py  test_graphrag.py  test_k2_2_retrieval_cutover.py  test_k2_2_runtime_migration.py  test_k2_4_governance.py  test_k3_5_1_governance_consistency.py  test_memory_vault.py  test_merger.py  test_model_router.py  (+19 more)
(+162 files in other folders)
